# issnpy

./: CHANGELOG  README.rst  pyproject.toml  requirements.txt  setup.py
issnpy/: __init__.py  __main__.py  client.py  record.py  utils.py
tests/: test_portal_compat.py
utilities/: build
